@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-09T00:58:43Z",
+  "timestamp" : "2022-05-09T08:15:26Z",
   "count_outdated" : 263,
   "uniques_outdated" : 129,
-  "count" : 290,
-  "uniques" : 150,
+  "count" : 291,
+  "uniques" : 151,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -53,6 +53,13 @@
       "count_minmax": [ 0, 9 ],
       "uniques": 6,
       "uniques_minmax": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2022-05-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
