@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 14,
   "clones": [
     {
@@ -36,6 +36,11 @@
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 9,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-05-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
